lnet/include/lnet/lib-lnet.h
@@ -19,6 +19,7 @@
 #define CFS_FAIL_MATCH_MD_NID		0xe001
 #define CFS_FAIL_DELAY_MSG_FORWARD	0xe002
 #define CFS_FAIL_TEST_PING_MD		0xe003
+#define CFS_FAIL_RTR_HEALTH_INC		0xe004
 
 #include <lustre_compat/linux/generic-radix-tree.h>
 #include <lustre_compat/linux/hash.h>
